@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.8-11
-Date: 2012-06-15
+Date: 2012-06-20
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
