@@ -49,6 +49,7 @@ export("+.section",
        enuToOtherAdp,
        enuToOtherAdv,
        equatorialToLocalHorizontal,
+       errorbars,
        extract,
        fillGap,
        findBottom,
