@@ -1,4 +1,5 @@
 0.8-11
+- errorBars(): added
 - numberAsPOSIXct(): add a leap second for July 2012
 
 0.8-10
